--- a/profile.html
+++ b/profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -47,18 +47,30 @@
 			</div>
 		</header>
 		<main class="main">
-			<div class="container">
+			<div class="container container-overflow">
 				<div class="main__profile profile">
 					<div class="profile__sidebar">
 						<ul class="profile__list">
-							<li class="profile__item"><a href="" class="profile__link profile__link-active">Мой профиль</a></li>
-							<li class="profile__item"><a href="" class="profile__link">Интересы</a></li>
-							<li class="profile__item"><a href="" class="profile__link">Мои объекты</a></li>
-							<li class="profile__item"><a href="" class="profile__link">Настройки</a></li>
-							<li class="profile__item"><a href="" class="profile__link">Тарифы и оплата</a></li>
-							<li class="profile__item"><a href="" class="profile__link">Поездки</a></li>
-							<li class="profile__item"><a href="" class="profile__link">Отзывы</a></li>
-							<li class="profile__item"><a href="" class="profile__link">Программа лояльности</a></li>
+							<li class="profile__item">
+								<a href="./profile.html" class="profile__link profile__link-active">Мой профиль</a>
+							</li>
+							<li class="profile__item">
+								<a href="./profile-interests.html" class="profile__link">Интересы</a>
+							</li>
+							<li class="profile__item">
+								<a href="./profile-objects.html" class="profile__link">Мои объекты</a>
+							</li>
+							<li class="profile__item">
+								<a href="./profile-settings.html" class="profile__link">Настройки</a>
+							</li>
+							<li class="profile__item">
+								<a href="./profile-tarrifs.html" class="profile__link">Тарифы и оплата</a>
+							</li>
+							<li class="profile__item"><a href="./profile-trips.html" class="profile__link">Поездки</a></li>
+							<li class="profile__item"><a href="./profile-reviews.html" class="profile__link">Отзывы</a></li>
+							<li class="profile__item">
+								<a href="./profile-loyalty.html" class="profile__link">Программа лояльности</a>
+							</li>
 						</ul>
 					</div>
 					<div class="profile__content">
@@ -76,20 +88,59 @@
 							</div>
 						</section>
 						<section class="profile__section achievements">
-              <h2 class="achievements__title profile-title">Достижения:</h2>
-              <ul class="achievements__list">
-                <li class="achievements__item">
-                  <div class="achievements__img-wrap">
-                    <img src="./assets/img/profile/1.png" alt="">
-                  </div>
-                  <p class="achievements__text">Опытный путешественник</p>
-                  <p class="achievements__span">Совершил 5 и более поездок</p>
-                </li>
-              </ul>
-            </section>
+							<h2 class="achievements__title profile-title">Достижения:</h2>
+							<ul class="achievements__list">
+								<li class="achievements__item">
+									<div class="achievements__img-wrap">
+										<img src="./assets/img/profile/1.png" alt="" />
+									</div>
+									<p class="achievements__text">Опытный путешественник</p>
+									<p class="achievements__span">Совершил 5 и более поездок</p>
+								</li>
+
+								<li class="achievements__item">
+									<div class="achievements__img-wrap">
+										<img src="./assets/img/profile/2.png" alt="" />
+									</div>
+									<p class="achievements__text">Любитель безопасности</p>
+									<p class="achievements__span">Совершил 5 поездок с сопровождением</p>
+								</li>
+
+								<li class="achievements__item">
+									<div class="achievements__img-wrap">
+										<img src="./assets/img/profile/3.png" alt="" />
+									</div>
+									<p class="achievements__text">Отличник лояльности</p>
+									<p class="achievements__span">Пригласил 5 пользователей</p>
+								</li>
+
+								<li class="achievements__item">
+									<div class="achievements__img-wrap">
+										<img src="./assets/img/profile/4.png" alt="" />
+									</div>
+									<p class="achievements__text">
+										Высокая <br />
+										похвала
+									</p>
+									<p class="achievements__span">
+										Рейтинг <br />
+										выше 4.6
+									</p>
+								</li>
+
+								<li class="achievements__item">
+									<div class="achievements__img-wrap">
+										<img src="./assets/img/profile/5.png" alt="" />
+									</div>
+									<p class="achievements__text">Постоянный пользователь</p>
+									<p class="achievements__span">Более 1 года на сервисе</p>
+								</li>
+							</ul>
+						</section>
 					</div>
 				</div>
 			</div>
 		</main>
+		<script src="./js/profile.js"></script>
 	</body>
 </html>
