--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 								</ul>
 							</div>
 						</section>
-						<section class="section catalog">
+						<section class="catalog">
 							<ul class="catalog__list">
 								<li class="catalog__item catalog-item">
 									<div class="catalog-item__swiper">
