--- a/reviews-full.html
+++ b/reviews-full.html
@@ -55,10 +55,10 @@
 						<div class="profile-object__top">
 							<ul class="profile-object__list">
 								<li class="profile-object__item">
-									<a href="./profile-tarrifs.html" class="profile-object__link active">Стандартный отзыв</a>
+									<a href="./reviews.html" class="profile-object__link ">Стандартный отзыв</a>
 								</li>
 								<li class="profile-object__item">
-									<a href="#!" class="profile-object__link">Расширенный отзыв</a>
+									<a href="#!" class="profile-object__link active">Расширенный отзыв</a>
 								</li>
 							</ul>
 						</div>
