--- a/verification.html
+++ b/verification.html
@@ -145,7 +145,7 @@
 								</defs>
 							</svg>
 							<p class="completed-text">Проверка завершена, выписка соответсвует, объект опубликован</p>
-							<a class="completed-link" href="#!">
+							<a class="completed-link accent" href="#!">
 								<span>В личный кабинет</span>
 								<svg
 									width="11"
