--- a/reviews.html
+++ b/reviews.html
@@ -55,10 +55,10 @@
 						<div class="profile-object__top">
 							<ul class="profile-object__list">
 								<li class="profile-object__item">
-									<a href="./profile-tarrifs.html" class="profile-object__link active">Стандартный отзыв</a>
+									<a href="" class="profile-object__link active">Стандартный отзыв</a>
 								</li>
 								<li class="profile-object__item">
-									<a href="#!" class="profile-object__link">Расширенный отзыв</a>
+									<a href="./reviews-full.html" class="profile-object__link">Расширенный отзыв</a>
 								</li>
 							</ul>
 						</div>
